<resources>
    <string name="app_name">Sanctair</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="details">Details</string>
    <string name="causes">Causes</string>
    <string name="solutions">Solutions</string>
    <string name="airPollution">Air Pollution</string>
    <string name="effectOnPeople">Effect on people</string>
    <string name="shortTerm">Short Term</string>
    <string name="longTerm">Long Term</string>
    <string name="sensitiveGroups">Sensitive Groups</string>
    <string name="welcome">Welcome</string>
    <string name="thanks">Thank you for installing Sanctair, to provide information more relevant to your needs please fill out the next questions. All information is stored solely on your device.</string>
    <string name="next">Next</string>
    <string name="title_activity_maps_test">Map</string>
    <string name="allergiesquestion">Check any which you more sensitive to.</string>
    <string name="dust">Dust</string>
    <string name="pollen">Pollen</string>
    <string name="smoke">Smoke</string>
    <string name="formaldehyde">Formaldehyde</string>
    <string name="mold">Mold</string>
    <string name="dander">Dander</string>
    <string name="title_activity_settings">Settings</string>
    <string name="carbonMonoxide">Carbon Monoxide</string>
    <string name="overlays">Overlays</string>
    <string name="fires">Fires and Thermal Anomalies</string>
    <string name="nitricacid">Nitric Acid</string>
    <string name="sulfuricacid">Sulfuric Acid</string>
    <string name="dustscore">Dust Score</string>
    <string name="so2">Sulfur Dioxide</string>
    <string name="ozone">Ozone</string>
    <string name="aerosol">Aerosol Optical Depth</string>
    <string name="illnessesQuestion">Check any diseases you suffer from.</string>
    <string name="asthma">Asthma</string>
    <string name="copd">Chronic obstructive pulmonary disease</string>
    <string name="pneumonitis">Hypersensitivity Pneumonitis</string>
    <string name="cardiovasculardisease">Cardiovascular disease</string>
    <string name="prev">Prev</string>
    <string name="finished">Finished!</string>
    <string name="endtext">The app will now highlight data relevant to your conditions. The following screen will display a map with near real-time satellite data overlays. If there is no data available, try a previous date by tapping it on the top of the screen. Relevant overlays/ratings will be marked with an asterisk(*).</string>
    <string name="continueToApp">Continue</string>
    <string name="opacity">Opacity</string>
    <string name="airqualityrating">Air Quality Rating</string>
    <string name="compositeaqi">Composite AQI</string>
    <string name="fineparticlepollution">Fine Particle Pollution</string>
    <string name="coarseparticlepollution">Coarse Particle Pollution</string>
    <string name="no2">Nitrogen Dioxide</string>
    <string name="aqi">Air Quality Index Rating</string>
    <string name="none">None</string>
    <string name="ratings">Ratings</string>
    <string name="overlay">Overlay</string>
    <string name="overlayscale">overlayScale</string>
    <string name="minCO">40 – 40.4ppb</string>
    <string name="maxCO"><![CDATA[>= 140ppb]]></string>
    <string name="coAIRS">The Carbon Monoxide Overlay is provided by the NASA Jet Propulsion
        Laboratory\'s Atmospheric Infrared Sounder (AIRS). The AIRS Carbon Monoxide (CO) Total
        Column (Day/Night) layer indicates the amount of Carbon Monoxide in the total vertical
        column profile of the atmosphere (from Earth’s surface to top-of-atmosphere) and is measured
        in parts per billion by volume (ppbv).  Carbon Monoxide pollution is caused
        mainly by internal combustion engine exhaust, especially in older vehicles. Infants,
        the elderly, people with chronic heart disease, anemia, or breathing problems are more
        susceptible to CO. Carbon Monoxide in high enough concentration, which can be caused by
        using dry ice or an old car in a poorly ventilated area, is also deadly to anyone.</string>
    <string name="anemia">Anemia</string>
    <string name="compositeAQIinfo">The Composite Air Quality Index (AQI) is provided by the United
        States Environmental Protection Agency (EPA). It is the highest of the other ratings for
        each station. AQI values at or below 100 are generally thought of as satisfactory.</string>
    <string name="noOvelaySelected">No overlay selected</string>
    <string name="noOverlayContent">Choose an overlay to see information about it here.</string>
    <string name="noRatingTitle">No rating selected</string>
    <string name="noRatingContent">Select a rating to display more information about it here</string>
    <string name="compositeGood">0–50: Good</string>
    <string name="compositeModerate">51–100: Moderate</string>
    <string name="compositeUFSG">101–150: Unhealthy for sensitive groups</string>
    <string name="compositeUnhealthy">151–200: Unhealthy</string>
    <string name="compositeVU">201–250: Very Unhealthy</string>
    <string name="compositeHazardous">251–300: Hazardous</string>
    <string name="allHazardous">301–500 Everyone should avoid all outdoor exertion</string>
    <string name="ozoneInfo">The Microwave Limb Sounder (MLS) Ozone (O3) Mixing Ratio layer at 46hPa
        (hectopascals) indicates ozone levels at the vertical atmospheric pressure level of 46hPa,
        and is measured in parts per billion by volume (ppbv). Ozone is a gas that can be good or
        bad depending on where it is found. Good ozone is present naturally in the Earth’s upper
        atmosphere—approximately 6 to 30 miles (~9.7 to 48.2 km) above the Earth’s surface. This
        natural ozone shields us from the sun\’s harmful ultraviolet rays. Bad Ozone forms near the
        ground when pollutants react with sunlight. While MLS does not measure ozone down to the
        Earth\'s surface, MLS measurements can be used to improve the vertical resolution of other
        sensors on the Aura satellite, allowing mid- and lower-tropospheric ozone to be
        distinguished from the large amounts of ozone in the stratosphere and upper troposphere.</string>
    <string name="ozoneMin">0.500ppmv</string>
    <string name="ozoneMax">4.500ppmv</string>
    <string name="aerosolInfo">The Moderate Resolution Imaging Spectroradiometer (MODIS) Aerosol
        Optical Depth (or Aerosol Optical Thickness) layer indicates the level at which particles
        in the air (aerosols) prevent light from traveling through the atmosphere. Aerosols absorb
        and scatter incoming sunlight, which reduces visibility and increases the optical depth. An
        optical depth of less than 0.1 indicates a clear sky with maximum visibility, and a value of
        1 indicates the presence of aerosols so dense that people would have difficulty seeing the Sun.
        The algorithm is not applied over sunglint ocean regions or bright (desert) land regions</string>
    <string name="aerosolMax">0.70</string>
    <string name="aerosolMin">-0.05</string>
    <string name="relativehumidity">Relative Humidity</string>
    <string name="minHumidity">1–2%</string>
    <string name="maxHumidity">100%</string>
    <string name="humidityInfo">The Atmospheric Infrared Sounder (AIRS) Relative Humidity layer
        indicates the percent relative humidity at varying pressure levels measured in hectopascals
        (hPa). The vertical profile information produced by the AIRS instrument augments radiosonde
        data. 400hPa, the profile being displayed, is approximately 7km or 23,000 feet</string>
    <string name="ozoneMarkerInfo">Sensitive groups include: People with lung disease, such as asthma, children, older adults, and people who are active outdoors</string>
    <string name="o3Good">0–50: Good, no action needed</string>
    <string name="o3Moderate">51–100: Moderate, unusually sensitive people should <b>consider reducing</b> heavy/prolonged outdoor exertion</string>
    <string name="o3UFSG">101–150: Unhealthy for sensitive groups, those in sensitive groups should <b>reduce</b> heavy/prolonged outdoor exertion</string>
    <string name="o3Unhealthy">151–200: Unhealthy, those in sensitive groups should <b>avoid</b> heavy/prolonged outdoor exertion. All others should <b>limit heavy/prolonged</b> outdoor exertion</string>
    <string name="o3VU">201–300: Very Unhealthy, those in sensitive groups should <b>avoid all</b> outdoor exertion. All others should <b>limit</b> outdoor exertion.</string>
    <string name="o3Detail">An AQI of 100 for ozone corresponds to an ozone level of 0.075 parts per million (averaged over 8 hours).</string>
    <string name="pm25MarkerInfo">Sensitive groups include: People with heart or lung disease, older adults and children.</string>
    <string name="pm25Detail">An AQI of 100 corresponds to 35 micrograms per cubic meter (averaged over 24 hours).</string>
    <string name="pm10Detail">An AQI of 100 corresponds to 150 micrograms per cubic meter (averaged over 24 hours).</string>
    <string name="coMarkerInfo">Sensitive groups include: People with heart disease, such as angina.</string>
    <string name="coUFSG">100–150: Unhealthy for sensitive groups: Those in sensitive groups should reduce heavy exertion and avoid sources of carbon monoxide, such as heavy traffic.</string>
    <string name="coUnhealthy">151–200: Unhealthy, those in sensitive groups should reduce moderate exertion and avoid sources of carbon monoxide, such as heavy traffic.</string>
    <string name="coVU">201–300: Very Unhealthy, those in sensitive groups should avoid exertion and sources of carbon monoxide, such as heavy traffic.</string>
    <string name="coDetail">An AQI of 100 for carbon monoxide corresponds to a level of 9 parts per million (averaged over 8 hours).</string>
    <string name="coModerate">51–100: Moderate, no action needed</string>
    <string name="so2MarkerInfo">Sensitive groups include: Children, asthmatics, and people with heart or lung disease</string>
    <string name="so2Unhealthy">151–200: Unhealthy, those in sensitive groups should reduce exertion outdoors.</string>
    <string name="so2Detail">An AQI of 100 for sulfur dioxide corresponds to a level of 75 parts per billion (averaged over one hour).</string>
    <string name="so2UFSG">101–150: Unhealthy for sensitive groups, People with asthma should consider reducing exertion outdoors.</string>
    <string name="so2VU">201–300: Very Unhealthy, Those in sensitive groups should avoid outdoor exertion. All others should reduce exertion outdoors.</string>
    <string name="commoncauses">Common Causes</string>
    <string name="coCauses">Created when carbon in fuel doesn\'t completely burn\nVehicle exhaust is the largest source\nOlder vehicles or vehicles with modified exhaust can be especially harmful\nIndustrial processes\nWildfires\nFormation facilitated in cold weather</string>
    <string name="specificToArea">Specific to your area</string>
    <string name="noDataCauses">No data (yet), tap the pencil to add data! Does your city have an abnormally large amount of cars? Are there constant wildfires? Does a specific industrial building seem to pollute too much?</string>
    <string name="ozoneCauses">Good Ozone is naturally occurring\nBad ozone forms when pollutants react with sunlight\nWarmer weather facilitates bad ozone production</string>
    <string name="aerosolCauses">Pollution from factories\nSmoke\nDust from dust storms\nSea Salts\nVolcanic Ash\nSmog</string>
</resources>