<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.baptista.kevin.sanctair.CausesPage">


    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/causesTabHost"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/causesOverlayTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/causesOverlayTitle"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/commoncauses"
                        android:id="@+id/overlayCommonCauses"
                        android:layout_below="@+id/causesOverlayTitle"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/contentCommonCausesOverlay"
                        android:gravity="center"
                        android:layout_below="@+id/overlayCommonCauses"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/specificToArea"
                        android:id="@+id/specificOverlayCause"
                        android:layout_below="@+id/contentCommonCausesOverlay"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/noDataCauses"
                        android:id="@+id/specificAreaOverlayCausesContent"
                        android:layout_below="@+id/specificOverlayCause"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:gravity="center" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/causesMarkersTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/causesMarkersTitle"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/commoncauses"
                        android:id="@+id/markersCommonCauses"
                        android:layout_below="@+id/causesMarkersTitle"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/contentCommonCausesMarkers"
                        android:gravity="center"
                        android:layout_below="@+id/markersCommonCauses"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/specificToArea"
                        android:id="@+id/specificMarkersCause"
                        android:layout_below="@+id/contentCommonCausesMarkers"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/noDataCauses"
                        android:id="@+id/specificAreaMarkersCausesContent"
                        android:layout_below="@+id/specificMarkersCause"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:gravity="center" />
                </RelativeLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</FrameLayout>
